--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <title>My Pet</title>
     </head>
-    <h1>His name is Lucky</h1>
+    <h1>His name is <em>Lucky</em></h1>
 
     <body>
         <p>Lucky loves to play and being groomed by me!</p>
+        <p>Welcome to my<strong> pet site!!</strong>
+        </p>
+        <p>check out this nostalgic link, <a href="https://worldsbiggestpacman.com/">This the world's biggest pacman ever created</a></p>
+            <p>You could play the games for hours without stopping</p>
 
     </body>
 </html>
