--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </p>
         <p>check out this nostalgic link, <a href="https://worldsbiggestpacman.com/">This the world's biggest pacman ever created</a></p>
             <p>You could play the games for hours without stopping</p>
+            <img src="images/pacman.jpg" alt="A photo of the pacman game">
 
     </body>
 </html>
