add a resized photo on index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Pet</title>
+        <title>Games of the 90's</title>
     </head>
-    <h1>His name is <em>Lucky</em></h1>
+    <h1>Let's talk <em>Pacman!!</em></h1>
 
     <body>
-        <p>Lucky loves to play and being groomed by me!</p>
+        <p>For anyone born in the late 90's or early 2000's will tell you that this was one hands down one of the best games ever created.</p>
         <p>Welcome to my<strong> pet site!!</strong>
         </p>
-        <p>check out this nostalgic link, <a href="https://worldsbiggestpacman.com/">This the world's biggest pacman ever created</a></p>
-            <p>You could play the games for hours without stopping</p>
-            <img src="images/pacman.jpg" alt="A photo of the pacman game">
+        <p>Check out this nostalgic link, <a href="https://worldsbiggestpacman.com/">This the world's biggest pacman ever created</a>Enjoy that link</p>
+            <p>You could play the games for hours without stopping like we used to do in arcades, only now it's better. You can play it online for free for as long as you like. </p>
+            <img src="images/pacman.jpg" width="600" height="363" alt="A photo of the pacman game">
 
     </body>
 </html>
