--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <title>Games of the 90's</title>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <h1>Let's talk <em>Pacman!!</em></h1>
 
     <body>
         <p>For anyone born in the late 90's or early 2000's will tell you that this was one hands down one of the best games ever created.</p>
-        <p>Welcome to my<strong> pet site!!</strong>
+        <p>Welcome to my<strong> game site!!</strong>
         </p>
-        <p>Check out this nostalgic link, <a href="https://worldsbiggestpacman.com/">This the world's biggest pacman ever created</a>Enjoy that link</p>
+        <p>Check out this nostalgic link, <a href="https://worldsbiggestpacman.com/">This the world's biggest pacman ever created</a> Enjoy that link</p>
             <p>You could play the games for hours without stopping like we used to do in arcades, only now it's better. You can play it online for free for as long as you like. </p>
             <img src="images/pacman.jpg" width="600" height="363" alt="A photo of the pacman game">
 
