--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
     <body>
         <p>For anyone born in the late 90's or early 2000's will tell you that this was one hands down one of the best games ever created.</p>
+        <p>Some of the games we used to play when we were younger include;</p>
+        <ol type="I">
+            <li>Meet Dave</li>
+            <li>Mario Kart</li>
+            <li>Solitare</li>
+        </ol>
         <p>Welcome to my<strong> game site!!</strong>
         </p>
         <p>Check out this nostalgic link, <a href="https://worldsbiggestpacman.com/">This the world's biggest pacman ever created</a> Enjoy that link</p>
