add style to heading two

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <h1>Let's talk <em>Pacman!!</em></h1>
+    <h2>Are you as excited as I am?</h2>
 
     <body>
         <p>For anyone born in the late 90's or early 2000's will tell you that this was one hands down one of the best games ever created.</p>
